# WEBCRAWLER

./: .gitignore  Cargo.toml  README.md
config/: default.toml
src/: config.rs  error.rs  jd.rs  lib.rs  main.rs
src/crawler/: client.rs  mod.rs  page.rs
src/douban/: mod.rs
src/parser/: mod.rs
src/storage/: mod.rs
